features overflow fix

--- a/source/sass/blocks/wysiwyg-wrapper.scss
+++ b/source/sass/blocks/wysiwyg-wrapper.scss
@@ -72,7 +72,8 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 20px;
-  margin: 11px 0 0;
+  margin: 11px auto 0;
+  max-width: 250px;
   grid-row: 3 / 4;
 
   @media (min-width: $tablet-width) {
@@ -102,6 +103,7 @@
   grid-row: 1 / 2;
   width: min-content;
   margin: 0 auto;
+  max-width: 250px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
@@ -123,7 +125,8 @@
   line-height: 20px;
   color: $persian-blue;
   grid-row: 2 / 3;
-  margin-top: 1px;
+  margin: 1px auto 0;
+  max-width: 250px;
 
   @media (min-width: $tablet-width) {
     margin: 1px 0 0;
